# fieldnote

./: .gitignore  CONTRIBUTING.md  PROVIDERS.md  README.md  SECURITY.md  STATUS.md  _brain.json  app.py  main.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: __init__.py  auto_agent.py  code_sync.py  degraded_mode.py  discovery_enrichment.py  github_agent.py  github_discovery.py  github_sync.py  integration_agent.py  mcp_agent.py  mcp_registry.py  mcp_router.py  mcp_verifier.py  pipeline_guard.py  provider_router.py  run_checkpoint.py  scheduler.py  skill_quality.py  skill_validator.py  supply_chain_policy.py  transcript_pipeline.py  verify_agent.py
assistant_knowledge/: architecture.md  index.json  preferences.md  provider-config-and-aliases.md  scheduler-jobs-and-sync.md
fieldnote_mcp/: RUNBOOK.md  fieldnote_server.py  integrations_registry.py  mcp_hub_registry.json
scripts/: check_repository_quality.py
skills/: 100_hours_of_hermes_agent_lessons_in_19_minutes.md  2_8_trillion_parameters_kimi_k3_is_here.md  6_insane_hermes_agent_use_cases_that_you_need_righ.md  advanced_retrieval_augmented_generation.md  airecon.md  (+158 more)
tools/record-replay-free/: README.md  install-windows.ps1  pyproject.toml
tools/record-replay-free/.github/workflows/: ci.yml
tools/record-replay-free/examples/: publish-promo.yml
tools/record-replay-free/src/record_replay/: browser.py  cli.py  export_skill.py  model.py  ollama.py  playbook.py  recorder.py  replay.py  storage.py  variables.py  video.py
tools/record-replay-free/tests/: test_core.py
(+91 files in other folders)
