[project]
name = "fieldnote-record-replay"
version = "1.0.0"
description = "Free, local-first, cross-platform workflow recording and safe replay"
requires-python = ">=3.11"
dependencies = ["pynput>=1.7.7", "pyautogui>=0.9.54", "PyYAML>=6.0.2", "pydantic>=2.10"]

[project.optional-dependencies]
browser = ["playwright>=1.51"]
video = ["faster-whisper>=1.1.0"]
test = ["pytest>=8.3"]

[project.scripts]
rrf = "record_replay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/record_replay"]

[tool.pytest.ini_options]
pythonpath = ["src"]
